[project]
name = "linkedincontentagent"
version = "0.1.0"
description = "linkedinContentAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
linkedincontentagent = "linkedincontentagent.main:run"
run_crew = "linkedincontentagent.main:run"
train = "linkedincontentagent.main:train"
replay = "linkedincontentagent.main:replay"
test = "linkedincontentagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
